# EmbodiedDataTransfer

./: .gitignore  README.md  pyproject.toml
prompts/: README.md  single_arm_scene_tuning_en.txt
scripts/: README.md  append.sh  common.sh  full_pipeline_episode.sh  process_dataset.sh  run.sh
src/embodied_data_transfer/: __init__.py  __main__.py  augmentation.py  cli.py  common.py  cosmos_workflow.py  dataset_processing.py  dataset_workflow.py
